[gd_scene load_steps=33 format=2]

[ext_resource path="res://ships/text_ship/explode_ship.wav" type="AudioStream" id=1]
[ext_resource path="res://ships/text_ship/ship_fly.wav" type="AudioStream" id=2]
[ext_resource path="res://ships/text_ship/shooter/enemy_ship_shooter.png" type="Texture" id=3]
[ext_resource path="res://ships/text_ship/TextShip.gd" type="Script" id=4]
[ext_resource path="res://shaders/sprite_outline.shader" type="Shader" id=5]
[ext_resource path="res://ships/text_ship/IdlingState.tscn" type="PackedScene" id=6]
[ext_resource path="res://fsm/AnimationState.gd" type="Script" id=7]
[ext_resource path="res://ships/text_ship/ship_pickup_text.wav" type="AudioStream" id=8]
[ext_resource path="res://ships/text_ship/DieState.gd" type="Script" id=9]
[ext_resource path="res://ships/text_ship/TextShipStateMachine.gd" type="Script" id=10]
[ext_resource path="res://ships/text_ship/DescendingState.tscn" type="PackedScene" id=12]
[ext_resource path="res://components/StateLabel.tscn" type="PackedScene" id=13]
[ext_resource path="res://ships/text_ship/AppearingState.gd" type="Script" id=14]
[ext_resource path="res://ships/text_ship/HitByShotState.gd" type="Script" id=15]
[ext_resource path="res://ships/text_ship/target/Target.tscn" type="PackedScene" id=16]
[ext_resource path="res://ships/text_ship/ReachedFinishState.gd" type="Script" id=18]

[sub_resource type="Curve" id=1]
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 0.908805, 0.340044 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 10, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 600, 0 )
orbit_velocity = 0.25
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )
color = Color( 0.839216, 0.960784, 0.0313726, 1 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 10, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 600, 0 )
orbit_velocity = -0.25
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )
color = Color( 0.839216, 0.960784, 0.0313726, 1 )

[sub_resource type="ShaderMaterial" id=18]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="CircleShape2D" id=7]
radius = 66.03

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.307787, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.172549, 0, 0.733333, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ":)" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "textShipCollidedShooter" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=10]
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 0.203063, 0.406126 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.819608, 0.0666667, 0.0666667, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 12.8093, 8.15138 ), Vector2( 18.6318, -4.65794 ), Vector2( 2.32903, -8.15139 ), Vector2( -11.6448, 2.9112 ), Vector2( -6.40461, 17.4673 ), Vector2( 0, 0 ), Vector2( -12.944, -11.1273 ), Vector2( 12.4898, -24.9797 ), Vector2( -9.53768, -7.72099 ), Vector2( 17.0316, 17.4858 ), Vector2( -21.3463, 16.5774 ), Vector2( -21.8004, -20.4379 ), Vector2( 10.2189, -20.4379 ), Vector2( -2.27088, 1.36253 ), Vector2( 15.6691, 9.31061 ), Vector2( -17.4858, 7.26682 ), Vector2( -17.7129, -15.2149 ), Vector2( 7.72097, -15.442 ), Vector2( -5.67722, -2.04379 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExplosionsBattery/CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.95 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ExplosionsBattery/CPUParticles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ExplosionsBattery/CPUParticles2D4:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ExplosionsBattery/CPUParticles2D3:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.65 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.8, 1 ),
"transitions": PoolRealArray( 1, 0.164939 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.8, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ExplosionsBattery/AudioStreamPlayer:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.15, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ExplosionsBattery/AudioStreamPlayer2:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("ExplosionsBattery/AudioStreamPlayer3:playing")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "method"
tracks/12/path = NodePath("TextShipStateMachine/Die")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "scoreShipKillPoints"
} ]
}

[sub_resource type="Animation" id=11]
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.45 ),
"transitions": PoolRealArray( 0.203063, 6.9644, 4.5948 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.819608, 0.0666667, 0.0666667, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionsBattery/AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("TextShipStateMachine/Hit")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "scoreShipHitPoints"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:material:shader")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Nose/ShotSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/Nose:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "pickup_text"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/outline_width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 3.0, 1.0, 2.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.839216, 0.960784, 0.0313726, 1 ), Color( 0.819608, 0.0666667, 0.0666667, 1 ), Color( 0.839216, 0.960784, 0.0313726, 1 ), Color( 0.819608, 0.0666667, 0.0666667, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RigidBody2D/AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.172549, 0, 0.733333, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ":)" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "textShipCollidedShooter" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Curve" id=15]
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.425714, 103.765 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=16]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.488571, 49.2041 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=17]
max_value = 4.0
_data = [ Vector2( 0, 4 ), 0.0, 0.0, 0, 0, Vector2( 0.471429, 1.19352 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="TextShip" type="Node2D" groups=[
"shootable-ship",
"text_ship",
]]
script = ExtResource( 4 )
currentText = ":)"

[node name="TextShipStateMachine" type="Node" parent="."]
script = ExtResource( 10 )
shipAppearingTime = 0.5

[node name="Appearing" type="Node" parent="TextShipStateMachine"]
script = ExtResource( 14 )

[node name="Descending" parent="TextShipStateMachine" instance=ExtResource( 12 )]

[node name="Idling" parent="TextShipStateMachine" instance=ExtResource( 6 )]

[node name="Hit" type="Node" parent="TextShipStateMachine"]
script = ExtResource( 15 )

[node name="Die" type="Node" parent="TextShipStateMachine"]
script = ExtResource( 9 )
animatorPath = NodePath("../../AnimationPlayer")
animationName = "die"

[node name="CollideShip" type="Node" parent="TextShipStateMachine"]
script = ExtResource( 7 )
animatorPath = NodePath("../../AnimationPlayer")
animationName = "collide_ship"

[node name="ReachedFinish" type="Node" parent="TextShipStateMachine"]
script = ExtResource( 18 )
animatorPath = NodePath("../../AnimationPlayer")
animationName = "reached_finish"

[node name="Thrusters" type="Node2D" parent="."]

[node name="ThrusterLeft" type="Particles2D" parent="Thrusters"]
position = Vector2( -44.5938, -38.5573 )
rotation = 2.35619
emitting = false
amount = 88
lifetime = 0.5
one_shot = true
process_material = SubResource( 3 )

[node name="ThrusterRight" type="Particles2D" parent="Thrusters"]
position = Vector2( 47.8775, -39.1629 )
rotation = -2.26893
emitting = false
amount = 88
lifetime = 0.5
one_shot = true
process_material = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Thrusters"]
stream = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 18 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Sprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.783
margin_top = -97.8866
margin_right = -29.7828
margin_bottom = -83.8866
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = ":)"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" parent="Sprite" instance=ExtResource( 16 )]
position = Vector2( 1, -15 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( -1.13544, -12.2627 )
collision_layer = 10
collision_mask = 4
mode = 3
custom_integrator = true
contacts_reported = 1
contact_monitor = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="RigidBody2D"]
stream = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 8 )
anims/collide_ship = SubResource( 9 )
anims/die = SubResource( 10 )
anims/hit = SubResource( 11 )
anims/pickup_text = SubResource( 13 )
anims/reached_finish = SubResource( 14 )

[node name="StateLabel" parent="." instance=ExtResource( 13 )]
margin_left = -61.2032
margin_top = -86.7807
margin_right = 67.7968
margin_bottom = -70.7807
sourceFSM = NodePath("../TextShipStateMachine")
showPrevStateTimeout = 0.9

[node name="ExplosionsBattery" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="ExplosionsBattery"]
scale = Vector2( 2, 2 )
emitting = false
amount = 100
one_shot = true
explosiveness = 0.9
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.5
angular_velocity = 45.0
angular_velocity_random = 0.5
linear_accel_curve = SubResource( 15 )
damping_curve = SubResource( 16 )
scale_amount_curve = SubResource( 17 )
color = Color( 0.819608, 0.0666667, 0.0666667, 1 )
anim_speed = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="CPUParticles2D2" type="CPUParticles2D" parent="ExplosionsBattery"]
scale = Vector2( 2, 2 )
emitting = false
amount = 100
one_shot = true
explosiveness = 0.9
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.5
angular_velocity = 45.0
angular_velocity_random = 0.5
linear_accel_curve = SubResource( 15 )
damping_curve = SubResource( 16 )
scale_amount_curve = SubResource( 17 )
color = Color( 0.819608, 0.0666667, 0.0666667, 1 )
anim_speed = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="CPUParticles2D3" type="CPUParticles2D" parent="ExplosionsBattery"]
scale = Vector2( 2, 2 )
emitting = false
amount = 100
one_shot = true
explosiveness = 0.9
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.5
angular_velocity = 45.0
angular_velocity_random = 0.5
linear_accel_curve = SubResource( 15 )
damping_curve = SubResource( 16 )
scale_amount_curve = SubResource( 17 )
color = Color( 0.819608, 0.0666667, 0.0666667, 1 )
anim_speed = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="CPUParticles2D4" type="CPUParticles2D" parent="ExplosionsBattery"]
scale = Vector2( 2, 2 )
emitting = false
amount = 100
one_shot = true
explosiveness = 0.9
emission_shape = 2
emission_rect_extents = Vector2( 10, 10 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.5
angular_velocity = 45.0
angular_velocity_random = 0.5
linear_accel_curve = SubResource( 15 )
damping_curve = SubResource( 16 )
scale_amount_curve = SubResource( 17 )
color = Color( 0.819608, 0.0666667, 0.0666667, 1 )
anim_speed = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ExplosionsBattery"]
stream = ExtResource( 1 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ExplosionsBattery"]
stream = ExtResource( 1 )

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ExplosionsBattery"]
stream = ExtResource( 1 )
[connection signal="body_entered" from="RigidBody2D" to="TextShipStateMachine" method="_onBodyEntered"]

[editable path="TextShipStateMachine/Descending"]
